err/fit-neuron.err
Listing '.'...
Listing './bin'...
Compiling './bin/dl_neuron_data.py'...
***   File "./bin/dl_neuron_data.py", line 54
    print "Zip file not found at: " + str(ZIP_NAME)
                                  ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/fit_neuron'...
Listing './lib/python3.5/site-packages/fit_neuron/data'...
Compiling './lib/python3.5/site-packages/fit_neuron/data/data_loader.py'...
***   File "./lib/python3.5/site-packages/fit_neuron/data/data_loader.py", line 86
    print "Loading data..."
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/fit_neuron/data/dl_neuron_data.py'...
***   File "./lib/python3.5/site-packages/fit_neuron/data/dl_neuron_data.py", line 54
    print "Zip file not found at: " + str(ZIP_NAME)
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fit_neuron/evaluate'...
Compiling './lib/python3.5/site-packages/fit_neuron/evaluate/evaluate.py'...
***   File "./lib/python3.5/site-packages/fit_neuron/evaluate/evaluate.py", line 138
    print "New plot: " + file_path
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/fit_neuron/evaluate/spkd_lib.py'...
***   File "./lib/python3.5/site-packages/fit_neuron/evaluate/spkd_lib.py", line 439
    print "Spike train 1: " + str(st_0)
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fit_neuron/optimize'...
Compiling './lib/python3.5/site-packages/fit_neuron/optimize/sic_lib.py'...
***   File "./lib/python3.5/site-packages/fit_neuron/optimize/sic_lib.py", line 128
    print sic.sic_val
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/fit_neuron/optimize/subthreshold.py'...
***   File "./lib/python3.5/site-packages/fit_neuron/optimize/subthreshold.py", line 316
    print "Estimating subthreshold parameters..."
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/fit_neuron/optimize/threshold.py'...
***   File "./lib/python3.5/site-packages/fit_neuron/optimize/threshold.py", line 16
    def get_grad_and_hessian((thresh_param,X_cat)):
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fit_neuron/tests'...
Compiling './lib/python3.5/site-packages/fit_neuron/tests/test.py'...
***   File "./lib/python3.5/site-packages/fit_neuron/tests/test.py", line 63
    print "Successfully pickle file to: " + str(pickle_file_path)
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fit_neuron-0.0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
